# schema-diff

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  docker-build.sh  pyproject.toml  requirements-dev.txt
.github/: PUBLISHING_CHECKLIST.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: action-self-test.yml  auto-release.yml  auto-tag.yml  ci.yml  dependabot-auto-merge.yml  docker.yml  pre-commit.yml  release.yml  schema-check-example.yml  tests.yml  version-bump.yml
docs/: DOCKER.md
examples/: README.md  api-v1.yaml  api-v2-breaking.yaml  api-v2-safe.yaml
schema_diff/: cli.py  diff.py  loader.py  models.py
schema_diff/openapi/: diff.py  json_schema_diff.py  normalizer.py  resolver.py
tests/: conftest.py  test_cli.py  test_cli_fail_on_breaking_flag.py  test_diff.py  test_openapi_components_parameters_ref.py  test_openapi_diff.py  test_openapi_header_case_insensitive.py  test_openapi_header_params_diff.py  test_openapi_params_diff.py  test_openapi_schema_diff.py
