[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-diff"
version = "0.1.0"
description = "Detect breaking changes between API schemas (OpenAPI / JSON Schema)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Teodor Lazar"}
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/teolzr/schema-diff"
Repository = "https://github.com/teolzr/schema-diff"
Issues = "https://github.com/teolzr/schema-diff/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.12",
  "ruff>=0.1",
  "mypy>=1.7",
  "build>=1.0",
  "twine>=4.0"
]

[project.scripts]
schema-diff = "schema_diff.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_diff*"]

[tool.setuptools]
package-dir = {"" = "."}
