[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-schema-diff"
version = "1.0.1"
description = "Detect breaking changes between API schemas (OpenAPI / JSON Schema)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Teodor Lazar"}
]
keywords = ["openapi", "json-schema", "api", "diff", "breaking-changes", "ci-cd", "schema-validation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/teolzr/schema-diff"
Repository = "https://github.com/teolzr/schema-diff"
Issues = "https://github.com/teolzr/schema-diff/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.12",
  "ruff>=0.1",
  "mypy>=1.7",
  "build>=1.0",
  "twine>=4.0",
  "pre-commit>=4.0"
]

[project.scripts]
api-schema-diff = "schema_diff.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_diff*"]

[tool.setuptools]
package-dir = {"" = "."}
